# GradDog

./: .gitignore  demo.py  main.py  pyproject.toml  requirements.txt  setup.py
demos/exponential-families/: exponential_family.py  observed_information.py
demos/simple/: quadratic.py
docs/source/: conf.py
graddog/: __init__.py  compgraph.py  functions.py  math.py  modes.py  ops.py  tools.py  trace.py  types.py
hessian_applications/exponential_families/: exponential_family.py  observed_information.py
hessian_applications/tests/: gaussian.py  quadratic.py
info_geometry/general_formulation/: amari.py  fisher.py  parameterizing_probability.py
tests/: test_function.py  test_hessian.py  test_kwargs.py  test_tools.py  test_trace.py
