[project]
name = "graddog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "setuptools>=80.9.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pylint>=4.0.2",
]
